--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,39 +1,33 @@
-.cnCardRoot {
+.cnCardRoot{
     position: relative;
     width: 300px;
     height: 300px;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+    box-shadow: 0 2px 4px rgba(0,0,0,.2);
 }
-
-.cnCardRoot:hover .cnCardHover {
+.cnCardRoot:hover .cnCardHover{
+display: flex;
+}
+.cnCardRoot:hover .cnCardIcons{
     display: flex;
 }
-
-.cnCardRoot:hover .cnCardIcons {
-    display: flex;
-}
-
-.cnCardImage {
+.cnCardImage{
     width: 300px;
     height: 300px;
     object-fit: cover;
-    border-radius: 10px;
 }
 
-.cnCardHover {
+.cnCardHover{
     position: absolute;
     top: 0;
-    right: 0;
     left: 0;
     bottom: 0;
+    right: 0;
     display: none;
     background-color: #000;
     opacity: .4;
-
 }
-
-.cnCardIcons {
+.cnCardIcons{
     display: none;
     align-items: center;
     justify-content: center;
@@ -43,20 +37,17 @@
     bottom: 0;
     right: 0;
 }
-
-.cnCardIcon {
+.cnCardIcon{
     color: #fff;
     font-size: 20px;
     cursor: pointer;
 }
-
-.cnCardNumber {
+.cnCardNumber{
     margin-left: 5px;
     color: #fff;
     font-size: 20px;
     line-height: 20px;
 }
-
-.cnCardLikes {
+.cnCardLikes{
     margin-right: 10px;
 }
