--- a/src/components/DetailedCard/styles.css
+++ b/src/components/DetailedCard/styles.css
@@ -5,11 +5,10 @@
   border: 1px solid #dbdbdb;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-
 .cnDetailedCardHeader {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   height: 60px;
   padding-left: 20px;
   background-color: #fff;
@@ -19,7 +18,6 @@
   height: 300px;
   width: 100%;
 }
-
 
 .cnDetailedCardButtons {
   display: flex;
@@ -38,13 +36,10 @@
   padding: 0 10px 10px 10px;
 }
 
-
-
 .cnDetailedCardLikeIcon {
   margin-right: 10px;
   cursor: pointer;
 }
-
 .cnDetailedCardLikeComment {
   cursor: pointer;
 }
