--- a/src/components/ImageWithLoader/styles.css
+++ b/src/components/ImageWithLoader/styles.css
@@ -1,25 +1,22 @@
 .cnImageWithLoaderRoot {
-    position: relative;
+  position: relative;
 }
-
 .cnImageWithLoaderWrapper {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
-
 .cnImageWithLoaderImg {
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: 1s;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: 1s;
 }
-
 .cnImageWithLoaderImgLoaded {
-    opacity: 1;
+  opacity: 1;
 }
