--- a/src/components/UserBadge/styles.css
+++ b/src/components/UserBadge/styles.css
@@ -20,3 +20,15 @@
   font-weight: 500;
   color: #000;
 }
+
+.cnAboutUser {
+  font-size: 12px;
+  color: gray;
+}
+
+.cnUserInfoAbout {
+  display: flex;
+  flex-direction: column;
+}
+
+
