--- a/src/components/DetailedCard/styles.css
+++ b/src/components/DetailedCard/styles.css
@@ -23,11 +23,22 @@
   background-color: #fafafa;
 }
 
-.cnDetailedCardButtons {
-  display: flex;
-  padding: 10px;
+.cnTags span {
+  margin: 10px;
+  background-color: palevioletred;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 400;
+
 }
 
+.cnDetailedCardButtons {
+  display: flex;
+  margin-top: 10px;
+  padding: 10px;
+
+}
 
 .cnDetailedCardLikes {
   font-size: 14px;
@@ -44,10 +55,12 @@
 .cnDetailedCardLikeIcon {
   margin-right: 10px;
   cursor: pointer;
+  font-size: 20px;
 }
 
 .cnDetailedCardLikeComment {
   cursor: pointer;
+  font-size: 20px;
 }
 
 .cnDetailedCardCommentTitle {
