--- a/src/components/DetailedCard/styles.css
+++ b/src/components/DetailedCard/styles.css
@@ -88,7 +88,7 @@
     max-width: 360px;
   }
 }
-=======
+
 .cnDetailedCardTitle {
   padding-top: 15px;
   padding-left: 15px;
@@ -101,10 +101,40 @@
   
 }
 
+.cnDetailedCardTags span {
+  margin: 10px;
+  background-color: palevioletred;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 400;
+
+}
+
 .cnDetailedCreatidTime {
   padding-left: 15px;
   padding-top: 5px;
   font-size: 14px;
   font-style: italic;
   color: gray;
+}
+
+.cnDetailedCardTime {
+  margin-top: 10px;
+  margin-left: 10px;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.cnDetailedCardTitle {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 10px;
+}
+
+.cnDetailedCardDescription {
+  font-size: 14px;
+  margin-bottom: 15px;
+  padding: 10px;
 }
