--- a/src/components/TextArea/styles.css
+++ b/src/components/TextArea/styles.css
@@ -8,7 +8,6 @@
   box-sizing: border-box;
   background-color: #fff;
   margin-bottom: 10px;
-  margin-left: 10px;
   padding: 5px;
   outline: none;
   resize: none;
@@ -18,16 +17,20 @@
   border-radius: 10px;
 }
 
+.cnTextArea:focus {
+  border: 1px solid palevioletred;
+}
 
 .cnSendButton {
   position: absolute;
-  bottom: 10px;
+  bottom: 12px;
   right: 10px;
 }
 
 
 
 @media (max-width: 780px) {
+
   .cnTextAreaWrapper {
     display: flex;
     flex-direction: column;
