--- a/src/components/UserAddPost/styles.css
+++ b/src/components/UserAddPost/styles.css
@@ -1,4 +1,4 @@
-.cnAddModal{
+.cnAddModal {
     width: auto;
     height: auto;
     outline: none;
@@ -6,22 +6,23 @@
     padding: 50px;
     display: flex;
     flex-direction: column;
-
+    border-radius: 10px;
 }
-.cnAddModalOverlay{
+
+.cnAddModalOverlay {
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
-  
+
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
-.cnAddModalForm{
+.cnAddModalForm {
     display: flex;
     flex-direction: column;
     gap: 15px;
