--- a/src/components/TextArea/styles.css
+++ b/src/components/TextArea/styles.css
@@ -13,7 +13,7 @@
   resize: none;
   width: 70%;
   min-height: 70px;
-  border: 1px solid cadetblue;
+  border: 1px solid #5f9ea0;
   border-radius: 10px;
 }
 
@@ -26,8 +26,6 @@
   bottom: 12px;
   right: 10px;
 }
-
-
 
 @media (max-width: 780px) {
 
