--- a/src/pages/UsersCards/styles.css
+++ b/src/pages/UsersCards/styles.css
@@ -11,8 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 100px;
-    padding-left: 10px;
+    padding-top: 25px;
     width: 930px;
     margin: inherit;
   
@@ -23,7 +22,7 @@
     flex-direction: column;
     align-items: center;
   }
-  
+ 
   .cnNoUsersCards {
     margin: auto;
     font-weight: 600;
@@ -35,19 +34,15 @@
   }
   
   @media (max-width: 360px) {
-    .cnUsersCardsScroll {
-      padding-top: 100px;
-      padding-left: 10px;
-      max-width: 300px;
+    .cnUsersCardsRoot {
+      max-width: 340px;
   
     }
   }
   
   @media (max-width: 780px) {
-    .cnUsersCardsScroll {
-      padding-top: 100px;
-      padding-left: 10px;
-      max-width: 600px;
+    .cnUsersCardsRoot {
+      max-width: 760px;
   
     }
   }
