--- a/src/pages/UserPage/styles.css
+++ b/src/pages/UserPage/styles.css
@@ -9,12 +9,18 @@
 
 .cnUserPageRootContent {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   padding-top: 100px;
   padding-left: 10px;
-  width: 930px;
-  margin: inherit;
+  max-width: 930px;
+  position: relative;
+  margin-bottom: 30px;
+}
 
+.cnUserPageScroll {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .cnUserPageCard {
@@ -23,10 +29,7 @@
   border-radius: 10px;
 }
 
-.cnUserPageScroll {
-  display: flex;
-  flex-wrap: wrap;
-}
+
 
 .cnUserPageNoPosts {
   margin: auto;
@@ -35,13 +38,20 @@
 }
 
 .cnInput {
-  margin-bottom: 21px;
+  margin-bottom: 20px;
+}
+
+.cnAndUserPostsContainer {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
 }
 
 @media (max-width: 360px) {
   .cnUserPageRootContent {
-    padding-top: 100px;
-    padding-left: 10px;
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
     max-width: 350px;
 
   }
@@ -52,6 +62,9 @@
     padding-top: 100px;
     padding-left: 10px;
     max-width: 680px;
-
   }
+  .cnUserPageScroll {
+    justify-content: center;
+  }
+  
 }
