--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -2,25 +2,21 @@
 
 .cnNavbarRoot {
   height: 80px;
-  width: 100%;
   border-bottom: 1px solid #dbdbdb;
   border-radius: 0 0 10px 10px;
   background-color: #fff;
 }
 
 .cnNavbarWrapper {
-  background: fixed;
-  height: 100%;
   display: flex;
+  height: 100%;
   align-items: center;
-  justify-content: space-between;
   max-width: 1080px;
   margin: auto;
-  position: sticky;
-
+  justify-content: space-between;
 }
-
 .cnNavbarLink {
+  margin-left: 20px;
   text-decoration: none;
   color: #000;
   font-family: 'Caveat', cursive;
@@ -28,8 +24,61 @@
   font-size: 36px;
   color: cadetblue;
 }
+.cnAddPostBtnWrapper {
+  display: flex;
+}
+
 
 .cnNavbarControlsWrapper {
   display: flex;
   align-items: center;
+}
+
+.cnUsersIcon {
+  margin-left: 30px;
+  cursor: pointer;
+  font-size: 25px;
+  margin-right: 20px;
+}
+
+.cnAddPostNavBtn {
+  background-color: palevioletred;
+  border-radius:100%;
+}
+
+.cnAddPostNavBtn:hover {
+  background-color: rgb(240, 125, 163);
+}
+
+.cnAddPostNavBtn:active  {
+  background: #808080;
+}
+
+
+@media (
+  max-width: 960px) {
+  .cnNavbarWrapper {
+    margin-right: 30px;
+  }
+  .cnNavbarLink {
+    margin-left: 20px;
+    font-size: 24px;
+    color: cadetblue;
+  }
+
+  .cnAddPostNavBtn {
+    padding: 10px;
+  }
+
+  .cnUsersIcon {
+    margin-left: 5px;
+    font-size: 15px;
+    margin-right: 5px;
+  }
+}
+
+@media (max-width: 380px) {
+  .cnNavbarWrapper {
+    margin-right: 10px;
+  }
 }
