post editing, unauthorized page, background, glass effect modals

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -6,6 +6,8 @@
   border-bottom: 1px solid #dbdbdb;
   border-radius: 0 0 10px 10px;
   background-color: #fff;
+  position: fixed;
+  z-index: 999;
 }
 
 .cnNavbarWrapper {
@@ -32,4 +34,10 @@
 .cnNavbarControlsWrapper {
   display: flex;
   align-items: center;
+  gap: 10px;
+}
+
+.cnNavbarControlsWrapper i{
+  font-size: 18px;
+  color: cadetblue;
 }
