--- a/src/components/EditModal/styles.css
+++ b/src/components/EditModal/styles.css
@@ -1,36 +1,38 @@
-.cnAuthModal {
+.cnEditModal {
     width: auto;
     height: auto;
     outline: none;
+    background-color: #fff;
     padding: 50px;
     display: flex;
     flex-direction: column;
-    position: fixed;
-      /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(8.9px);
-  -webkit-backdrop-filter: blur(8.9px);
-  border: 1px solid rgba(255, 255, 255, 0.68);
-  
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.9px);
+    -webkit-backdrop-filter: blur(8.9px);
+    border: 1px solid rgba(255, 255, 255, 0.68);
   }
 
-.cnAuthModalOverlay {
+.cnEditModalOverlay {
     background-color: rgba(255, 255, 255, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
-    z-index: 300;
+  z-index: 300;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
   }
-  .cnAuthModalForm{
+  .cnEditModalForm{
     display: flex;
     flex-direction: column;
     gap: 15px;
 
+  }
+
+  .cnEditInput {
+    width: 400px;
   }
