--- a/src/components/PhotoModal/styles.css
+++ b/src/components/PhotoModal/styles.css
@@ -9,15 +9,17 @@
   background-color: #fff;
   border: 1px solid transparent;
   border-radius: 10px;
+  position: fixed;
+  z-index: 100;
 }
 
 .cnModalOverlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
-
+  z-index: 200;
   top: 0;
   left: 0;
   right: 0;
