--- a/src/components/SignupModal/styles.css
+++ b/src/components/SignupModal/styles.css
@@ -6,14 +6,20 @@
     padding: 50px;
     display: flex;
     flex-direction: column;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.9px);
+    -webkit-backdrop-filter: blur(8.9px);
+    border: 1px solid rgba(255, 255, 255, 0.68);
 }
 .cnSignupModalOverlay{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
-  
+    z-index: 300;
     top: 0;
     left: 0;
     right: 0;
