--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -4,7 +4,8 @@
     border-radius: 10px 10px 0 0;
     background-color: cadetblue;
     flex: 0 0 auto;
-
+    position: relative;
+    z-index: 999;
 }
 
 .cnFooterWrapper {
