--- a/src/components/UserBio/styles.css
+++ b/src/components/UserBio/styles.css
@@ -3,13 +3,42 @@
   justify-content: center;
   align-items: center;
 }
-
+.cnUserBioAvatarWrapper{
+  position: relative;
+}
 .cnUserBioAvatar {
   height: 150px;
   width: 150px;
   border-radius: 50%;
   margin-right: 40px;
+
 }
+.cnUserBioAvatarEditBtn{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: cadetblue;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  margin-right: 40px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.cnUserBioAvatarEditBtn:active {
+  background: rgb(74, 122, 124);
+}
+
+.cnUserBioAvatarEditBtn:disabled {
+  background: #e3f2fd;
+}
+
+
+
+
 
 .cnUserBioInfo {
   display: flex;
