--- a/src/components/AlertDeleteModal/styles.css
+++ b/src/components/AlertDeleteModal/styles.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     position: fixed;
+    z-index: 300;
     top: 0;
     left: 0;
     right: 0;
