--- a/src/components/PhotoModal/styles.css
+++ b/src/components/PhotoModal/styles.css
@@ -9,15 +9,17 @@
   background-color: #fff;
   border: 1px solid transparent;
   border-radius: 10px;
+  position: fixed;
+  z-index: 100;
 }
 
 .cnModalOverlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
-
+  z-index: 200;
   top: 0;
   left: 0;
   right: 0;
@@ -27,7 +29,6 @@
 .cnModalRoot {
   display: flex;
   border-radius: 10px;
-
 }
 
 .cnModalImgWrapper {
@@ -37,11 +38,12 @@
   background: #000;
   border-radius: 10px;
   margin-right: 10px;
+  margin-top: 10px;
 }
 
 .cnModalImg {
-  max-width: 1024px;
-  max-height: 1024px;
+  max-width: 500px;
+  max-height: 500px;
 }
 
 .cnModalHeader {
@@ -57,6 +59,8 @@
   max-height: 800px;
   background: #fff;
   overflow-y: scroll;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .cnModalTime {
@@ -118,6 +122,7 @@
 
 .cnModalIcons {
   display: flex;
+  padding-left: 10px;
 }
 
 .cnModalLikeIcon {
@@ -125,3 +130,68 @@
   font-size: 20px;
   margin-bottom: 10px;
 }
+
+
+
+@media (max-width: 780px) {
+  .cnBodyOverflow {
+    overflow: hidden;
+  }
+  
+  .cnModal {
+    max-width: 350px;
+  }
+  
+  .cnModalRoot {
+    display: flex;
+    border-radius: 10px;
+    flex-direction: column;
+    max-width: 350px;
+    align-items: center;
+  }
+  
+  .cnModalImgWrapper {
+    max-width: 360px;
+    min-height: 360px;
+    margin-right: 0px;
+  }
+  
+  .cnModalImg {
+    max-width: 280px;
+    max-height: 280px;
+  }
+  
+  .cnModalHeader {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-bottom: 1px solid #dbdbdb;
+    padding: 10px;
+    height: 30px;
+  }
+  
+  .cnModalInfoWrapper {
+    max-height: 300px;
+    background: #fff;
+    overflow-y: scroll;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    max-width: 300px;
+    padding: 10px;
+  }
+  
+  .cnModalCommentsBlock {
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .cnModalComments {
+    height: 500px;
+    border-radius: 10px;
+  }
+  
+}
+
+
