Editing the adaptive layout of the page of all users, user and main page

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -28,16 +28,17 @@
     color: orange;
 }
 
-@media (max-width: 960px) {
-    .cnFooterRoot {
-        max-width: 960px;
+
+@media (max-width: 780px) {  
+    .cnFooterWrapper {
+        max-width: 780px;
+    }
+  }
+  
+  @media (max-width: 360px) {
+    .cnFooterWrapper {
+        max-width: 360px;
     }
   }
 
-  
-@media (max-width: 375px) {
-    .cnFooterRoot {
-        max-width: 375px;
-    }
-  }
 
