--- a/src/components/DetailedCard/styles.css
+++ b/src/components/DetailedCard/styles.css
@@ -14,7 +14,6 @@
   justify-content: flex-start;
   height: 60px;
   background-color: #fafafa;
-
 }
 
 .cnDetailedCardImg {
@@ -24,6 +23,7 @@
 }
 
 .cnDetailedCardTime {
+  margin-right: 10px;
   margin-top: 15px;
   font-size: 14px;
   font-style: italic;
@@ -95,7 +95,7 @@
 .cnDetailedCardLikeComment {
   margin-right: 10px;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .cnDetailedCardCommentTitle {
