--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -10,17 +10,10 @@
 
 .cnLayoutBody {
   max-width: 1080px;
-  margin: auto;
   position: relative;
   z-index: 2;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
   display: flex;
   flex-direction: column;
-  width: fit-content;
   height: fit-content;
   padding: 100px;
   /* From https://css.glass */
@@ -30,10 +23,15 @@
   backdrop-filter: blur(8.9px);
   -webkit-backdrop-filter: blur(8.9px);
   border: 1px solid rgba(255, 255, 255, 0.68);
+  margin: auto;
 
 }
 
 .cnLayoutGradientWrapper {
+  display: flex;
+  align-items: center;
+    align-content: center;
+    justify-content: center;
   height: 100%;
   position: fixed;
   z-index: 0;
@@ -52,14 +50,16 @@
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 320x) {
   .cnLayoutBody {
-    max-width: 375px;
+    max-width: 320px;
+    margin: 0;
   }
 }
 
 @media (max-width: 780px) {
   .cnLayoutBody {
     max-width: 780px;
+    margin: 0;
   }
 }
