--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -8,6 +8,7 @@
   position: fixed;
   z-index: 999;
   width: 100%;
+
 }
 
 .cnNavbarWrapper {
@@ -15,8 +16,8 @@
   height: 100%;
   align-items: center;
   max-width: 1080px;
-  margin: auto;
-  justify-content: space-between;
+  justify-content: space-between;  
+  margin: 0 auto;
 }
 .cnNavbarLink {
   margin-left: 20px;
@@ -41,6 +42,7 @@
 .cnNavbarControlsWrapper i{
   font-size: 18px;
   color: cadetblue;
+  cursor: pointer;;
 }
 
 .cnUsersIcon {
@@ -67,6 +69,7 @@
 @media (
   max-width: 960px) {
   .cnNavbarWrapper {
+    max-width: 960px;
     margin-right: 30px;
   }
   .cnNavbarLink {
@@ -86,8 +89,22 @@
   }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 780px) {
   .cnNavbarWrapper {
+    max-width: 780px;
+    margin-right: 30px;
+  }
+  .cnNavbarRoot {
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 360px) {
+  .cnNavbarWrapper {
+    max-width: 360px;
+    margin-right: 30px;
+  }
+  .cnNavbarRoot {
     margin-right: 10px;
   }
 }
