--- a/src/pages/UserPage/styles.css
+++ b/src/pages/UserPage/styles.css
@@ -46,6 +46,9 @@
   margin-top: 10px;
 }
 
+.cnUserPageLoaderContainer {
+  margin: auto;
+}
 
 @media (max-width: 980px) {
   .cnUserPageRootContent {
