--- a/src/pages/UsersCards/styles.css
+++ b/src/pages/UsersCards/styles.css
@@ -36,6 +36,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    margin: auto;
   }
 
   @media (max-width: 780px) {
@@ -81,7 +82,6 @@
     .cnCardsInfoUsersBox {
       display: grid;
       grid-template-columns: 1fr;
-      max-width: 200px;
   }
   }
   
